--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,3 +96,121 @@ body {
 .highcharts-grid-line {
   stroke: #474747 !important;
 }
+
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 8px;
+  vertical-align: middle;
+  border-top: 4px solid;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
+
+.clear {
+  clear: both;
+  line-height: 0;
+  font-size: 0;
+}
+
+.timelineContainer {
+  border-left: 2px solid #ccc;
+  margin: 20px auto;
+  width: 900px;
+}
+
+div.timelineToggle {
+  float: right;
+  margin-right: 0;
+  white-space: nowrap;
+}
+
+div.timelineMajor {
+  clear: left;
+  float: left;
+  margin: 0 0 12px;
+  width: 900px;
+}
+
+.timelineMajor h2 {
+  /* background: url(timeline_century_tick.gif) left center no-repeat; */
+  cursor: pointer;
+  font-size: 2em;
+  font-weight: 400;
+  margin: 0 0 10px;
+  padding: 4px 4px 4px 20px;
+}
+
+.timelineMajor h2 span {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  letter-spacing: .1em;
+  line-height: 1.4em;
+  padding: 3px 5px 1px;
+}
+
+dl.timelineMinor {
+  clear: left;
+  float: left;
+  margin: 0 12px 0 0;
+  padding: 4px 4px 4px 0;
+  position: relative;
+  width: 880px;
+}
+
+.timelineMinor dt {
+  /* background: url(timeline_decade_tick.gif) left center no-repeat; */
+  clear: left;
+  font-size: 1.2em;
+  list-style-type: none;
+  line-height: 1.2em;
+  margin: 0 0 12px;
+  padding: 0 0 0 24px;
+  white-space: nowrap;
+}
+
+.timelineMinor dt a {
+  color: #999;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.timelineMinor dt a.closed {
+  color: #999;
+  font-size: 0.7em;
+  margin-left: 0;
+}
+
+.timelineMinor dt a.open {
+  color: #999;
+  font-size: 0.7em;
+}
+
+.timelineMinor dt a:hover {
+  color: #131313;
+}
+
+.timelineMinor dd {
+  padding-left: 24px;
+  width: 100%;
+}
+
+.timelineMinor dd h3 {
+  color: #FFF;
+  clear: both;
+  float: left;
+  font-size: 1.5em;
+  margin: 0;
+  white-space: nowrap;
+}
+
+.timelineEvent h4 {
+  clear: left;
+  float: left;
+  font-size: 1.4em;
+  font-weight: 400;
+  margin: 10px 0 0;
+  padding: 0 0 0 20px;
+}
